# tinify

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
